# inspiration

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .env.sample  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/routers/: english.py  japanese.py  lyrics.py  rhyme.py
backend/app/services/: english_phoneme.py  english_rhyme.py  pattern.py  phoneme.py  rhyme.py  search_utils.py  similarity.py  tokenizer.py
backend/scripts/: build_english_index.py  build_index.py
backend/tests/: test_english_phoneme.py  test_english_rhyme.py  test_lyrics.py  test_phoneme.py  test_rhyme.py  test_search_utils.py  test_similarity.py
docs/plans/: 2026-01-31-inspriation-design.md  2026-02-02-english-rhyme-search-design.md  2026-02-03-liquid-glass-design.md  2026-02-04-mora-filter-design.md  2026-02-07-refactoring-and-features-design.md  2026-02-07-rhyme-annotation.md
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnnotatedLyrics.tsx  CreativeNotes.tsx  EnglishResultCard.tsx  EnglishResultList.tsx  FavoritesPanel.tsx  HiraganaInput.tsx  HistoryPanel.tsx  LanguageTab.tsx  PatternBuilder.tsx  PhonemeDisplay.tsx  ResultCard.tsx  ResultList.tsx  ResultsSection.tsx  SearchSection.tsx  index.ts
frontend/src/hooks/: index.ts  useCreativeNotes.ts  useEnglishRhymeSearch.ts  useFavorites.ts  useHistory.ts  useLocalStorage.ts  useRhymeSearch.ts  useSearch.ts  useSpeech.ts
frontend/src/lib/: api.ts
(+2 files in other folders)
